syntax = "proto3";

package catalog;

// Enhanced catalog service with full CRUD operations
service CatalogService {
  // Query operations
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc SearchProducts(SearchProductsRequest) returns (GetProductsResponse);
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetProductsResponse);
  rpc CheckAvailability(CheckAvailabilityRequest) returns (AvailabilityResponse);

  // Mutation operations
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc UpdateProductStock(UpdateProductStockRequest) returns (Product);
  rpc BulkUpdateProducts(BulkUpdateProductsRequest) returns (BulkUpdateProductsResponse);
}

// Product message definition
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  double price = 5;
  string currency = 6;
  int32 stock_quantity = 7;
  string sku = 8;
  repeated string image_urls = 9;
  ProductStatus status = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  map<string, string> attributes = 13;
  ProductMetrics metrics = 14;
}

message ProductMetrics {
  int32 views_count = 1;
  int32 sales_count = 2;
  double average_rating = 3;
  int32 reviews_count = 4;
  int32 wishlist_count = 5;
}

// Request messages for queries
message GetProductRequest {
  string product_id = 1;
  bool include_metrics = 2;
}

message GetProductsRequest {
  repeated string product_ids = 1;
  int32 limit = 2;
  int32 offset = 3;
  bool include_metrics = 4;
  ProductStatus status_filter = 5;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total_count = 2;
  bool has_more = 3;
  PaginationInfo pagination = 4;
}

message SearchProductsRequest {
  string query = 1;
  string category = 2;
  double min_price = 3;
  double max_price = 4;
  int32 limit = 5;
  int32 offset = 6;
  string sort_by = 7;
  string sort_order = 8;
  repeated string tags = 9;
  ProductStatus status_filter = 10;
}

message GetProductsByCategoryRequest {
  string category = 1;
  int32 limit = 2;
  int32 offset = 3;
  string sort_by = 4;
  string sort_order = 5;
  bool include_subcategories = 6;
}

message CheckAvailabilityRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message AvailabilityResponse {
  bool is_available = 1;
  int32 available_quantity = 2;
  string message = 3;
  int64 restock_date = 4;
}

// Request messages for mutations
message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  double price = 4;
  string currency = 5;
  int32 stock_quantity = 6;
  string sku = 7;
  repeated string image_urls = 8;
  map<string, string> attributes = 9;
  repeated string tags = 10;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  double price = 5;
  string currency = 6;
  int32 stock_quantity = 7;
  repeated string image_urls = 8;
  ProductStatus status = 9;
  map<string, string> attributes = 10;
  repeated string tags = 11;
}

message DeleteProductRequest {
  string product_id = 1;
  bool soft_delete = 2;
  string reason = 3;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
  string deleted_product_id = 3;
}

message UpdateProductStockRequest {
  string product_id = 1;
  int32 quantity_change = 2;
  string operation = 3; // "add", "subtract", "set"
  string reason = 4;
}

message BulkUpdateProductsRequest {
  repeated UpdateProductRequest updates = 1;
}

message BulkUpdateProductsResponse {
  repeated Product updated_products = 1;
  repeated string failed_updates = 2;
  int32 success_count = 3;
  int32 error_count = 4;
}

// Utility messages
message PaginationInfo {
  int32 current_page = 1;
  int32 total_pages = 2;
  int32 page_size = 3;
  int32 total_items = 4;
}

// Enums
enum ProductStatus {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  OUT_OF_STOCK = 3;
  DISCONTINUED = 4;
  DRAFT = 5;
  ARCHIVED = 6;
}